--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-navigation": "^6.5.0",
     "react-native-reanimated": "^1.8.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-simple-store": "^2.0.2",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
