[Core]新增eslint 语法检查&代码格式化完善,增加perttier rules desc: (Link)[https://github.com/facebook/react-native/issues/26903]

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,7 @@
 {
-  "extends": [
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
+  "extends": ["react-app", "plugin:prettier/recommended"],
   "rules": {
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
-      }
-    ],
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "singleQuote": true,
-        "printWidth": 100
-      }
-    ]
-  },
-  "plugins": [
-    "prettier"
-  ]
+    "no-undef": 0,
+    "no-useless-constructor": 0
+  }
 }
