--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-simple-store": "^2.0.2",
     "react-native-svg": "^12.1.0",
     "react-native-ui-lib": "^5.7.2",
-    "rn-placeholder": "^3.0.0"
+    "rn-placeholder": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
