--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -169,6 +169,7 @@ android {
         pickFirst "lib/arm64-v8a/libc++_shared.so"
         pickFirst "lib/x86/libc++_shared.so"
         pickFirst "lib/x86_64/libc++_shared.so"
+        //exclude "lib/arm64-v8a/librealm-jni.so"
     }
 
     // applicationVariants are e.g. debug, release
