--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,9 @@
 
 buildscript {
     ext {
+        RNNKotlinVersion = kotlin
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 19
         compileSdkVersion = 28
         targetSdkVersion = 28
         //kotlin_version = '1.2.51'
