[Fixed]修复网络出错

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,8 @@ target 'IbodaoRn' do
 
 
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'IbodaoRnTests' do
     inherit! :complete
     # Pods for testing
