--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,9 +2,8 @@
 
 buildscript {
     ext {
-        RNNKotlinVersion = kotlin
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 19
+        minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
         //kotlin_version = '1.2.51'
@@ -19,6 +18,18 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    /*subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+
+
+                if (details.requested.group == 'androidx.core'
+                        && !details.requested.name.contains('androidx') ) {
+                    details.useVersion "1.0.1"
+                }
+            }
+        }
+    }*/
 }
 
 allprojects {
